# odd

./: .gitignore  README.md  codegen.py  meson.build  odd.kdev4  zcl.xsd
examples/: meson.build
examples/binding/: main.c  meson.build  test.sh  zcl.xml
examples/hello/: main.c  meson.build  test.sh  zcl.xml
examples/types/: main.c  meson.build  test.sh  zcl.xml
src/: dd_cbor.c  dd_cbor.h  dd_coap.c  dd_coap.h  dd_main.c  dd_main.h  dd_resources.c  dd_resources.h  dd_storage.c  dd_storage.h  dd_types.c  dd_types.h  meson.build
